Fix: adding missing test dependencies